--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="ResearchHub" />
     <meta name="keywords" content="research services, academic writing, thesis, dissertation, journal submission, implementation, academic support" />
  <!-- 🔥 Add This Line -->
-    <link rel="icon" type="image/jpeg" href="/favicon.png" />
+    <link rel="icon" type="image/jpeg" href="/logo.jpeg" />
     <meta property="og:title" content="ResearchHub - Professional Academic Support Services" />
     <meta property="og:description" content="Professional academic support services including research proposals, thesis writing, implementation, journal submission, and more. Expert consultants for students and researchers." />
     <meta property="og:type" content="website" />
